2011-12-13  Corinna Vinschen  <vinschen@redhat.com>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_handle): Call
	file_get_fnoi instead of NtQueryInformationFile.
	* path.cc (file_get_fnoi): New helper function to collect a
	FILE_NETWORK_OPEN_INFORMATION block.
	(symlink_info::check): Call file_get_fnoi rather than
	NtQueryInformationFile to collect a FILE_NETWORK_OPEN_INFORMATION block.
	* path.h (file_get_fnoi): Declare.

2011-12-13  Dave Korn  <dave.korn.cygwin@gmail.com>

	* times.cc (hires_ns::resolution): Don't return less than 1.

2011-12-12  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* cygthread.h (cygthread::name): Very minor formatting tweak.

	* exceptions.cc (_cygtls::call_signal_handler): Add paranoid debugging
	output.

	* sigproc.h (cygwait): Call signal handler when signal is detected and
	loop as appropriate.
	* fhandler.h (fhandler_base_overlapped::wait_return): Remove
	overlapped_signal.
	* fhandler.cc (fhandler_base_overlapped::wait_overlapped): Remove
	restartable signal accommodations in light of cygwait improvements.
	(fhandler_base_overlapped::raw_read): Remove now-obsolete signal loop
	behavior.
	(fhandler_base_overlapped::raw_write): Ditto.
	* fhandler_console.cc (fhandler_console::read): Ditto.
	* fhandler_serial.cc (fhandler_serial::raw_read): Ditto.
	(fhandler_serial::raw_write): Ditto.
	* fhandler_tty.cc (fhandler_pty_slave::read): Ditto.

	* ioctl.cc (ioctl): Add standard syscall introducer and leaver debug
	output.

2011-12-12  Corinna Vinschen  <vinschen@redhat.com>

	* fhandler_process.cc (dos_drive_mappings): Partially rewrite to
	handle volumes mounted into juntion points correctly.

2011-12-12  Corinna Vinschen  <vinschen@redhat.com>

	* fhandler_process.cc (dos_drive_mappings::dos_drive_mappings): Fully
	resolve symbolic links returned by QueryDosDeviceW.  Explain why.

2011-12-12  Corinna Vinschen  <vinschen@redhat.com>

	* mount.cc (fs_info::update): Set has_buggy_reopen for Netapps as well.
